# HelpAI

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
help_ai_backend/: Cargo.toml  config.toml
help_ai_backend/src/: main.rs
