[package]
name = "help_ai_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
hound = "3.5.1"
reqwest = { version = "0.11.23", features = ["json", "multipart"] }
serde_json = "1.0"
